# ubiquity-slideshow-neon

./: .gitignore  CMakeLists.txt  Messages.sh  build-directory-jsonp.py  cala_slide_demo.rb  test-slideshow.py
calamares-qml-plugin/: CMakeLists.txt  plugin.cpp  qmldir
debian/: changelog  control  copyright  ubiquity-slideshow-neon.install
po/ar/: ubiquity-slideshow-neon.po
po/az/: ubiquity-slideshow-neon.po
po/ca/: ubiquity-slideshow-neon.po
po/ca@valencia/: ubiquity-slideshow-neon.po
po/cs/: ubiquity-slideshow-neon.po
po/de/: ubiquity-slideshow-neon.po
po/el/: ubiquity-slideshow-neon.po
po/en_GB/: ubiquity-slideshow-neon.po
po/eo/: ubiquity-slideshow-neon.po
po/es/: ubiquity-slideshow-neon.po
po/et/: ubiquity-slideshow-neon.po
po/eu/: ubiquity-slideshow-neon.po
po/fi/: ubiquity-slideshow-neon.po
po/fr/: ubiquity-slideshow-neon.po
po/ga/: ubiquity-slideshow-neon.po
po/gl/: ubiquity-slideshow-neon.po
po/he/: ubiquity-slideshow-neon.po
po/hi/: ubiquity-slideshow-neon.po
po/hu/: ubiquity-slideshow-neon.po
po/id/: ubiquity-slideshow-neon.po
po/it/: ubiquity-slideshow-neon.po
po/ja/: ubiquity-slideshow-neon.po
po/ka/: ubiquity-slideshow-neon.po
po/ko/: ubiquity-slideshow-neon.po
po/lt/: ubiquity-slideshow-neon.po
po/my/: ubiquity-slideshow-neon.po
po/nl/: ubiquity-slideshow-neon.po
po/nn/: ubiquity-slideshow-neon.po
po/pl/: ubiquity-slideshow-neon.po
po/pt/: ubiquity-slideshow-neon.po
po/pt_BR/: ubiquity-slideshow-neon.po
po/ro/: ubiquity-slideshow-neon.po
po/ru/: ubiquity-slideshow-neon.po
po/sk/: ubiquity-slideshow-neon.po
po/sl/: ubiquity-slideshow-neon.po
po/sv/: ubiquity-slideshow-neon.po
po/tg/: ubiquity-slideshow-neon.po
po/tr/: ubiquity-slideshow-neon.po
po/uk/: ubiquity-slideshow-neon.po
po/zh_CN/: ubiquity-slideshow-neon.po
po/zh_TW/: ubiquity-slideshow-neon.po
ubiquity-slideshow/: slideshow.conf
ubiquity-slideshow/slides/: UbiquitySlide.qml  index.html  index.qml  kde.html  neon.html  plasma.html  secure.html
ubiquity-slideshow/slides/link/: core.css
ubiquity-slideshow/slides/link-core/: slideshow.js
